--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -34,5 +34,11 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: my-artifact
+      - name: list artifact content
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
