--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -45,7 +45,7 @@ jobs:
           name: my-artifact
       - name: list artifact content
         run: ls
-      - name:
+      - name: Output file name from previous job
         run: echo "${{ needs.build.outputs.script-file}}"
       - name: Deploy
         run: echo "Deploying..."
